--- a/gb/20/11/27/n12579362.md
+++ b/gb/20/11/27/n12579362.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/anzrqf3590/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/anzrqf3590/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/anzrqf3590/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/anzrqf3590/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/anzrqf3590/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/anzrqf3590/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/anzrqf3590/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/anzrqf3590/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台中国际动画影展登场 63部短片开放票选</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/471446-600x400.jpg" />
 <h6>2020台中国际动画影展27日晚间在新时代凯擘影城登场，本届共精选153部动画作品。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年11月27日讯】（大纪元记者黄玉燕台湾台中报导）2020台中国际<ahref="https://github.com/anzrqf3590/djy/blob/master/gb/tag/%E5%8A%A8%E7%94%BB.md#1">动画</a><ahref="https://github.com/anzrqf3590/djy/blob/master/gb/tag/%E5%BD%B1%E5%B1%95.md#1">影展</a>27日晚间在新时代凯擘影城登场，本届共精选153部动画作品，包括国际知名动画长片13部、7大观摩单元及63部竞赛短片，影展11月初开放预售票回响大；首映揭幕片为获2020安锡影展评审团特别奖的国际动画片《逃离梦幻小镇》。今日记者会同时揭晓今年短片竞赛奖座，由雕塑艺术家罗文仁制作，将影展吉祥物啄木鸟平面图像转化成全铜材质，打造而成的立体铜雕。</p>
-<p>副市长令狐荣达表示，台中国际<ahref="https://github.com/anzrqf3590/djy/blob/master/gb/tag/%E5%8A%A8%E7%94%BB.md#1">动画</a><ahref="https://github.com/anzrqf3590/djy/blob/master/gb/tag/%E5%BD%B1%E5%B1%95.md#1">影展</a>2015年开办迈入第6届，已是台湾规模最大的国际动画影展。这次影展由专业评审挑选出63部入围作品，为期6天的影展，将选出8大评审奖，同时由民众票选出“最佳儿童短片奖”和“观众人气票选奖”。</p>
+<p>【大纪元2020年11月27日讯】（大纪元记者黄玉燕台湾台中报导）2020台中国际<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A8%E7%94%BB.md#1">动画</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BD%B1%E5%B1%95.md#1">影展</a>27日晚间在新时代凯擘影城登场，本届共精选153部动画作品，包括国际知名动画长片13部、7大观摩单元及63部竞赛短片，影展11月初开放预售票回响大；首映揭幕片为获2020安锡影展评审团特别奖的国际动画片《逃离梦幻小镇》。今日记者会同时揭晓今年短片竞赛奖座，由雕塑艺术家罗文仁制作，将影展吉祥物啄木鸟平面图像转化成全铜材质，打造而成的立体铜雕。</p>
+<p>副市长令狐荣达表示，台中国际<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8A%A8%E7%94%BB.md#1">动画</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BD%B1%E5%B1%95.md#1">影展</a>2015年开办迈入第6届，已是台湾规模最大的国际动画影展。这次影展由专业评审挑选出63部入围作品，为期6天的影展，将选出8大评审奖，同时由民众票选出“最佳儿童短片奖”和“观众人气票选奖”。</p>
 <p>影展策展人王绮穗表示，影展开幕前已在台北、台中两地举办3场以“为台湾竞赛强片集气”为主题的特映会，放映8部角逐“台湾短片竞赛”及“台湾学生短片竞赛”首奖的动画决选作品，并邀请入围动画导演分享创作历程。此次动画影展影片品质佳，代表台湾动画能量充足，盼由影展带动相关产业发展。</p>
 <p>新闻局指出，2020台中国际动画影展共放映60场次，开幕片《逃离梦幻小镇》是波兰知名动画师Mariusz?Wilczynski荣获2020安锡影展评审团特别奖的作品；“双闭幕片”则有王小棣导演1998年台北电影节最佳影片《魔法阿妈》，以及日本动画大师大友克洋成名作《阿基拉》数位修复版。</p>
 <p>长片有获德国Schlingel国际儿童影展最佳动画片的《迷你奇航》和《筑梦奇迹》、入选坎城影展“一种注目”单元的《熊熊大作战》、安锡国际动画影展获奖作品《奇情》和《囧男孩看世界》、日本动画大师今敏的《蓝色恐惧：数位修复版》、东京动画奖长片竞赛首奖的法国动画《无手的女孩》。此外也网罗第57届金马奖提名佳作，包括漫画家郑问纪录片《千年一问》和动画长片《中山魂》。</p>
@@ -18,48 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/9/21/n12418072.md#1">《侏罗纪世界：白垩冒险营》影评：恐龙题材以动画呈现 也能很成功</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/9/29/n12438568.md#1">《龙猫》《神隐少女》等动画片 明年登台上映</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/10/19/n12486625.md#1">台湾3D动画论文 入选巴西、美国双影展</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/6/n12529219.md#1">2020台湾国际女性影展 桃园巡回放映</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/6/n12529658.md#1">台中国际动画影展预售 13部长片金光闪闪</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/6/n12529677.md#1">2020金马影展开幕 桂纶镁、杨祐宁等影人走红毯</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/7/n12530686.md#1">台湾寻根纪录片亮相多伦多亚洲国际影展</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/20/n12562878.md#1">2020“雪梨台湾影展”圆满落幕</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/25/n12574046.md#1">《FOOD超人》动画 风车图书携手大叶大学勇夺金钟奖</a></li>
-<li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/20/11/25/n12575568.md#1">新唐人将推出首部动画纪录片《扶摇直上》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/21/n12418072.md#1">《侏罗纪世界：白垩冒险营》影评：恐龙题材以动画呈现 也能很成功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/29/n12438568.md#1">《龙猫》《神隐少女》等动画片 明年登台上映</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/19/n12486625.md#1">台湾3D动画论文 入选巴西、美国双影展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/6/n12529219.md#1">2020台湾国际女性影展 桃园巡回放映</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/6/n12529658.md#1">台中国际动画影展预售 13部长片金光闪闪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/6/n12529677.md#1">2020金马影展开幕 桂纶镁、杨祐宁等影人走红毯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/7/n12530686.md#1">台湾寻根纪录片亮相多伦多亚洲国际影展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/20/n12562878.md#1">2020“雪梨台湾影展”圆满落幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/25/n12574046.md#1">《FOOD超人》动画 风车图书携手大叶大学勇夺金钟奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/25/n12575568.md#1">新唐人将推出首部动画纪录片《扶摇直上》</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/anzrqf3590/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/20/n12563807.md#1">《诸世纪》中第一个“反救世主”魔鬼是谁？</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12577367.md#1">【新闻大家谈】至暗时刻 重现奇迹关键密码</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12575553.md#1">【有冇搞错】数字极权主义侵袭 最后的自由之战</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12577737.md#1">【财商天下】公私合营复活？“待割韭菜”出逃</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12573298.md#1">川普律师寻求将自己在威州的选票废除</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12574897.md#1">习近平破惯例提前祝贺拜登 专家析背后原因</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12575706.md#1">遭死亡威胁 向朱利安尼提供拜登数据的店主关店</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572570.md#1">疑踩中共禁区 张艺谋《一秒钟》遭金鸡奖撤映</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12577188.md#1">谢金燕制作人吕晓栋猝逝 传倒卧高以翔墓园旁</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572786.md#1">观金马片《夜更》洒泪 杜汶泽叹亏欠香港年轻人</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12575491.md#1">遭旧爱追款现身法庭 星爷笑言高院是否要装修</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12573128.md#1">陶虹曝徐峥当年求婚：话没说完就被保安赶走</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12574162.md#1">天外飞来的？ 美国沙漠惊现神秘金属巨柱</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12571675.md#1">解密画面：美军F-35战机试投B61-12核弹</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572434.md#1">Moderna：无法证明疫苗可阻止病毒传播</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572798.md#1">防骨质疏松最有效的运动 天天都能做</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12572908.md#1">5分钟杀死病毒 加国亚伯塔大学研发口罩获奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/anzrqf3590/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/anzrqf3590/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/27/n12579362.htm">台中国际动画影展登场 63部短片开放票选</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/27/n12579362.htm">台中国际动画影展登场 63部短片开放票选</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/anzrqf3590/djy/blob/master/gb/20/11/27/n12579362.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/anzrqf3590/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/anzrqf3590/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/anzrqf3590/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/anzrqf3590/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anzrqf3590/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/11/27/n12579362.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
